--- a/src/app/pasta-menu/pasta-menu.component.html
+++ b/src/app/pasta-menu/pasta-menu.component.html
@@ -1,10 +1,24 @@
-<h2>Pastas</h2>
+<div class="body">
 
-<ul class="pastas">
-  <li *ngFor="let pasta of pastas">
-    <a routerLink="/detail/{{pasta.id}}">
-      <span class="badge">{{pasta.id}}</span> {{pasta.name}}
-    </a>
-    <button (click)="addToCart(pasta)">+</button>
-  </li>
-</ul>
+    <div class="container">
+      <h2>Pastas</h2>
+  <table class="menu">
+    <colgroup>
+    <col class="id">
+    <col class="name">
+    <col class="description">
+    <col class="price">
+    <col class="plus">
+    </colgroup>
+    <tr *ngFor="let pasta of pastas">
+
+      <td >{{pasta.id}}</td>
+      <td >{{pasta.name}}</td>
+      <td >{{pasta.description}}</td>
+      <td >{{pasta.price}} </td>
+      <td ><button (click)="addToCart(pasta)">+</button></td>
+
+    </tr>
+  </table>
+</div>
+</div>
