--- a/src/app/pasta-menu/pasta-menu.component.scss
+++ b/src/app/pasta-menu/pasta-menu.component.scss
@@ -1,10 +1,60 @@
-.pastas {
+.body{
+  display:flex;
+  justify-content: center;
+}
+
+h2{
+  text-align: center;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  min-width: 600px;
+  width: 100%;
+}
+tr, td{
+  border-bottom: 1px solid black;
+  padding: 15px;
+  text-align: left;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex: 0 0 600px;
+  max-width: 600px;
+  background-color: #E0DFD5;
+}
+
+.id {
+  width: 5%;
+
+}
+
+.name{
+  width: 25%;
+}
+
+.description{
+  width: 50%;
+}
+
+.price{
+  width: 15%;
+}
+
+.plus{
+  width: 5%;
+}
+
+.dishes {
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
   width: 15em;
 }
-.pastas li {
+.dishes li {
   position: relative;
   cursor: pointer;
   display: flex;
@@ -16,13 +66,13 @@
   border-radius: 4px;
 }
 
-.pastas li:hover {
+.dishes li:hover {
   color: #607D8B;
   background-color: #DDD;
   left: .1em;
 }
 
-.pastas a {
+.dishes a {
   color: #888;
   text-decoration: none;
   position: relative;
@@ -30,11 +80,11 @@
   width: 250px;
 }
 
-.pastas a:hover {
+.dishes a:hover {
   color:#607D8B;
 }
 
-.pastas .badge {
+.dishes .badge {
   display: inline-block;
   font-size: small;
   color: white;
