--- a/src/app/pizza-menu/pizza-menu.component.html
+++ b/src/app/pizza-menu/pizza-menu.component.html
@@ -1,12 +1,14 @@
-<h2>Pizzas</h2>
-
-<ul class="pizzas">
-  <li *ngFor="let pizza of pizzas">
-    <a routerLink="/detail/{{pizza.id}}">
-      <span class="badge">{{pizza.id}}</span> {{pizza.name}}
-    </a>
-    <button (click)="addToCart(pizza)">+</button>
-  </li>
-</ul>
-
+<div class="body">
+  <div class="container">
+    <ul class="dishes">
+      <h2>Pizzas</h2>
+      <li *ngFor="let pizza of pizzas">
+        <a routerLink="/detail/{{pizza.id}}">
+          <span class="badge">{{pizza.id}}</span> {{pizza.name}}
+        </a>
+        <button (click)="addToCart(pizza)">+</button>
+      </li>
+    </ul>
+  </div>
+</div>
 
