--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -3,65 +3,54 @@
   justify-content: center;
 }
 
+h2{
+  text-align: center;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  min-width: 600px;
+  width: 100%;
+}
+tr, td{
+  border-bottom: 1px solid black;
+  padding: 15px;
+  text-align: left;
+}
 .container {
   display: flex;
-  flex: 0 0 500px;
-  max-width: 500px;
+  justify-content: center;
+  flex-direction: column;
+  flex: 0 0 600px;
+  max-width: 600px;
   background-color: #E0DFD5;
-  justify-content: center;
-
 }
 
-.dishes {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
+.id {
+  width: 5%;
 }
-.dishes li {
-  position: relative;
+
+.name{
+  width: 75%;
+}
+
+.price{
+  width: 15%;
+}
+
+.minus{
+  width: 5%;
+}
+
+.checkout{
+  align-self: center;
+  max-width: fit-content;
+  padding: 12px 20px;
+  border: none;
+  margin-top: 30px;
+  border-radius: 8px;
   cursor: pointer;
-  display: flex;
-  justify-content: center;
-  background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
-  height: 1.6em;
-  border-radius: 4px;
 }
 
-.dishes li:hover {
-  color: #607D8B;
-  background-color: #DDD;
-  left: .1em;
-}
-
-.dishes a {
-  color: #888;
-  text-decoration: none;
-  position: relative;
-  display: block;
-  width: 250px;
-}
-
-.dishes a:hover {
-  color:#607D8B;
-}
-
-.dishes .badge {
-  display: inline-block;
-  font-size: small;
-  color: white;
-  padding: 0.8em 0.7em 0 0.7em;
-  background-color: #607D8B;
-  line-height: 1em;
-  position: relative;
-  left: -1px;
-  top: -4px;
-  height: 1.8em;
-  min-width: 16px;
-  text-align: right;
-  margin-right: .8em;
-  border-radius: 4px 0 0 4px;
-}
 
