--- a/src/app/dish-detail/dish-detail.component.html
+++ b/src/app/dish-detail/dish-detail.component.html
@@ -1,8 +1,15 @@
 <div *ngIf="dish">
+  <table>
+    <tr>
+      <td>
+        <h2>{{dish.name | uppercase}} Details</h2>
+        <div><span>id: </span>{{dish.id}}</div>
+        <div><span>name: </span>{{dish.name}}</div>
+        <div><span>price: </span>{{dish.price}}</div>
+      </td>
+      <td>
 
-  <h2>{{dish.name | uppercase}} Details</h2>
-  <div><span>id: </span>{{dish.id}}</div>
-  <div><span>name: </span>{{dish.name}}</div>
-  <div><span>price: </span>{{dish.price}}</div>
-
+      </td>
+    </tr>
+  </table>
 </div>
