--- a/src/app/order-detail/order-detail.component.html
+++ b/src/app/order-detail/order-detail.component.html
@@ -1,21 +1,35 @@
 <div class="body">
   <div class="container">
-    <div *ngIf="order">
-      <p>Name: {{order.address.firstName}} {{order.address.lastName}}</p>
-      <p>City: {{order.address.city}}</p>
-      <p>Street:{{order.address.lastName}}</p>
-      <p>Apartment:{{order.address.apartment}}</p>
-      <p>Floor:{{order.address.floor}}</p>
-    </div>
-    <table>
+    <table class="display">
       <tr>
-        <th>No.</th>
+        <td class="address">
+          <div *ngIf="order">
+            <p>Name: {{order.address.firstName}} {{order.address.lastName}}</p>
+            <p>City: {{order.address.city}}</p>
+            <p>Street: {{order.address.lastName}}</p>
+            <p>Apartment: {{order.address.apartment}}</p>
+            <p>Floor: {{order.address.floor}}</p>
+          </div>
+        </td>
+        <td class="dishes">
+          <table class="menu">
+            <colgroup>
+              <col class="id">
+              <col class="name">
+              <col class="description">
+              <col class="price">
+            </colgroup>
+            <tr *ngFor="let dish of dishes">
+
+              <td>{{dish.id}}</td>
+              <td>{{dish.name}}</td>
+              <td>{{dish.description}}</td>
+              <td>{{dish.price}} $</td>
+
+            </tr>
+          </table>
+        </td>
       </tr>
-      <div *ngFor="let dish of order.dishes">
-        <tr>
-          <td>{{dish}}</td>
-        </tr>
-      </div>
     </table>
     <button (click)="deleteOrder()" routerLink="/orders/"></button>
   </div>
