--- a/src/app/order-detail/order-detail.component.scss
+++ b/src/app/order-detail/order-detail.component.scss
@@ -10,3 +10,15 @@
   background-color: #E0DFD5;
   justify-content: center;
 }
+
+.display {
+  width: 100%;
+}
+
+.address {
+  width: 50%;
+}
+
+.dishes {
+  width: 50%;
+}
