--- a/src/app/order-list/order-list.component.html
+++ b/src/app/order-list/order-list.component.html
@@ -6,13 +6,14 @@
         <col class="id">
         <col class="address">
         <col class="dishes">
+        <col class="date">
       </colgroup>
       <tr *ngFor="let order of orders" routerLink="/order-detail/{{order.id}}">
 
         <td >{{order.id}}</td>
         <td >{{order.address.city}}, {{order.address.street}} {{order.address.apartment}}</td>
         <td >{{order.dishes}} </td>
-
+        <td >{{order.date | date:'HH:mm:ss'}} </td>
       </tr>
     </table>
 </div>
