--- a/src/app/pasta-menu/pasta-menu.component.html
+++ b/src/app/pasta-menu/pasta-menu.component.html
@@ -15,7 +15,7 @@
       <td >{{pasta.id}}</td>
       <td >{{pasta.name}}</td>
       <td >{{pasta.description}}</td>
-      <td >{{pasta.price}} </td>
+      <td >{{pasta.price}} $</td>
       <td ><button (click)="addToCart(pasta)">+</button></td>
 
     </tr>
