--- a/src/app/dish-list/dish-list.component.html
+++ b/src/app/dish-list/dish-list.component.html
@@ -12,8 +12,7 @@
         <td>{{dish.id}}</td>
         <td>{{dish.name}}</td>
         <td>{{dish.price}} $</td>
-        <td><label><input type="checkbox" checked (click)="">Available</label></td>
-
+        <td><label><input id="check" type="checkbox" [checked]=dish.isAvailable (change)="modifyAvailability(dish)">Available</label></td>
       </tr>
     </table>
   </div>
