--- a/src/app/pasta-menu/pasta-menu.component.html
+++ b/src/app/pasta-menu/pasta-menu.component.html
@@ -1,24 +1,26 @@
 <div class="body">
 
-    <div class="container">
-      <h2>Pastas</h2>
-  <table class="menu">
-    <colgroup>
-    <col class="id">
-    <col class="name">
-    <col class="description">
-    <col class="price">
-    <col class="plus">
-    </colgroup>
-    <tr *ngFor="let pasta of pastas">
+  <div class="container">
+    <h2>Pastas</h2>
+    <table class="menu" *ngIf="pastas$ | async as pastas">
+      <colgroup>
+        <col class="id">
+        <col class="name">
+        <col class="description">
+        <col class="price">
+        <col class="plus">
+      </colgroup>
+      <tr *ngFor="let pasta of pastas">
 
-      <td >{{pasta.id}}</td>
-      <td >{{pasta.name}}</td>
-      <td >{{pasta.description}}</td>
-      <td >{{pasta.price}} $</td>
-      <td ><button (click)="addToCart(pasta)">+</button></td>
-
-    </tr>
-  </table>
-</div>
+        <td>{{pasta.id}}</td>
+        <td>{{pasta.name}}</td>
+        <td>{{pasta.description}}</td>
+        <td>{{pasta.price}} $</td>
+        <td>
+          <span *ngIf="!pasta.isAvailable">not available</span>
+          <button *ngIf="pasta.isAvailable" (click)="addToCart(pasta)">+</button>
+        </td>
+      </tr>
+    </table>
+  </div>
 </div>
