--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,18 +3,24 @@
   justify-content: flex-end;
   min-width: 100%;
   min-height: 30px;
-  background-color: #313638;
+  background-color: #247BA0;
+
 }
 /* Style the tab */
 .tab {
   overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
+  display: flex;
+  justify-content: flex-start;
+  padding: 1px 20px;
+  border: 2px solid #70C1B3;
+  background-color: #B2DBBF;
 }
 
 /* Style the buttons that are used to open the tab content */
 .tab button {
   background-color: inherit;
+  font-family: Calibri;
+  font-size: 20px;
   float: left;
   border: none;
   outline: none;
@@ -23,19 +29,22 @@
   transition: 0.3s;
 }
 
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
+/* Create an active/current tablink class */
+.tab button:active {
+  background-color: #70C1B3;
 }
 
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #ccc;
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #FF1654;
 }
+
+
 
 /* Style the tab content */
 .tabcontent {
-  display: none;
+  display: flex;
+  justify-content: space-around;
   padding: 6px 12px;
   border: 1px solid #ccc;
   border-top: none;
