--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -1,7 +1,3 @@
-.body{
-  display:flex;
-  justify-content: center;
-}
 
 h2{
   text-align: center;
@@ -14,17 +10,9 @@ table {
   width: 100%;
 }
 tr, td{
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #70C1B3;
   padding: 15px;
   text-align: left;
-}
-.container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  flex: 0 0 600px;
-  max-width: 600px;
-  background-color: #E0DFD5;
 }
 
 .id {
@@ -49,7 +37,9 @@ tr, td{
   padding: 12px 20px;
   border: none;
   margin-top: 30px;
-  border-radius: 8px;
+  background-color: #70C1B3;
+  border: 2px solid #247BA0;
+  border-radius: 10px;
   cursor: pointer;
 }
 
