--- a/src/app/dish-list/dish-list.component.html
+++ b/src/app/dish-list/dish-list.component.html
@@ -8,7 +8,7 @@
         <col class="price">
         <col class="available">
       </colgroup>
-      <tr *ngFor="let dish of dishes">
+      <tr *ngFor="let dish of dishes" routerLink="/dish-detail/{{dish.id}}">
         <td>{{dish.id}}</td>
         <td>{{dish.name}}</td>
         <td>{{dish.price}} $</td>
