--- a/src/app/dish-list/dish-list.component.scss
+++ b/src/app/dish-list/dish-list.component.scss
@@ -1,7 +1,3 @@
-.body{
-  display:flex;
-  justify-content: center;
-}
 
 h2{
   text-align: center;
@@ -14,17 +10,9 @@ table {
   width: 100%;
 }
 tr, td{
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #70C1B3;
   padding: 15px;
   text-align: left;
-}
-.container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  flex: 0 0 600px;
-  max-width: 600px;
-  background-color: #E0DFD5;
 }
 
 .id {
