--- a/src/app/order-detail/order-detail.component.scss
+++ b/src/app/order-detail/order-detail.component.scss
@@ -1,24 +1,53 @@
-.body{
-  display:flex;
-  justify-content: center;
-}
-
-.container {
-  display: flex;
-  flex: 0 0 600px;
-  max-width: 600px;
-  background-color: #E0DFD5;
-  justify-content: center;
-}
 
 .display {
   width: 100%;
+  padding: 10px;
+}
+
+.top_half {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.status_delete {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  width: 30%;
+  padding: 10px;
+}
+
+.delete{
+  align-self: center;
+  max-width: fit-content;
+  padding: 12px 20px;
+  border: none;
+  margin-top: 30px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: #70C1B3;
 }
 
 .address {
   width: 50%;
+  align-self: center;
+  background-color: #70C1B3;
+  border-radius: 5px;
+  padding: 10px;
 }
 
 .dishes {
-  width: 50%;
+  width: 95%;
+  background-color: #70C1B3;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 10px;
+  margin-right: 20px;
 }
+
+tr, td{
+  border-bottom: 1px solid #247BA0;
+  padding: 15px;
+  text-align: left;
+}
+
