--- a/src/app/order-list/order-list.component.scss
+++ b/src/app/order-list/order-list.component.scss
@@ -1,16 +1,3 @@
-.body{
-  display:flex;
-  justify-content: center;
-}
-
-.container {
-  display: flex;
-  flex: 0 0 600px;
-  max-width: 600px;
-  background-color: #E0DFD5;
-  justify-content: center;
-}
-
 h2{
   text-align: center;
 }
@@ -22,17 +9,9 @@ table {
   width: 100%;
 }
 tr, td{
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #70C1B3;
   padding: 15px;
   text-align: left;
-}
-.container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  flex: 0 0 600px;
-  max-width: 600px;
-  background-color: #E0DFD5;
 }
 
 .id {
@@ -40,11 +19,15 @@ tr, td{
 }
 
 .address{
-  width: 55%;
+  width: 50%;
 }
 
 .dishes{
-  width: 30%;
+  width: 25%;
+}
+
+.status{
+  width: 20%;
 }
 
 .date{
