--- a/src/app/pasta-menu/pasta-menu.component.scss
+++ b/src/app/pasta-menu/pasta-menu.component.scss
@@ -1,6 +1,7 @@
 .body{
   display:flex;
   justify-content: center;
+  padding: 10px;
 }
 
 h2{
@@ -14,7 +15,7 @@ table {
   width: 100%;
 }
 tr, td{
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #70C1B3;
   padding: 15px;
   text-align: left;
 }
@@ -24,7 +25,9 @@ tr, td{
   flex-direction: column;
   flex: 0 0 600px;
   max-width: 600px;
-  background-color: #E0DFD5;
+  background-color: #B2DBBF;
+  border: 2px solid #70C1B3;
+  border-radius: 5px;
 }
 
 .id {
