--- a/src/app/dish-list/dish-list.component.scss
+++ b/src/app/dish-list/dish-list.component.scss
@@ -32,3 +32,15 @@ tr, td{
 .plus{
   width: 25%;
 }
+
+.add{
+  align-self: center;
+  max-width: fit-content;
+  padding: 12px 20px;
+  border: none;
+  margin-top: 30px;
+  background-color: #70C1B3;
+  border: 2px solid #247BA0;
+  border-radius: 10px;
+  cursor: pointer;
+}
