--- a/src/app/order-list/order-list.component.html
+++ b/src/app/order-list/order-list.component.html
@@ -9,7 +9,7 @@
         <col class="status">
         <col class="date">
       </colgroup>
-      <tr *ngFor="let order of orders" >
+      <tr *ngFor="let order of orders" routerLink="/order-detail/{{order.id}}">
         <td >{{order.id}}</td>
         <td >{{order.address.city}}, {{order.address.street}} {{order.address.apartment}}</td>
         <td >{{order.dishes}} </td>
