--- a/src/app/dish-detail/dish-detail.component.scss
+++ b/src/app/dish-detail/dish-detail.component.scss
@@ -13,3 +13,20 @@ tr, td{
   padding: 15px;
   text-align: left;
 }
+
+button{
+  max-width: fit-content;
+  padding: 12px 20px;
+  border: none;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  background-color: #70C1B3;
+  border: 2px solid #247BA0;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.submit_container{
+  display: flex;
+  justify-content: space-around;
+}
