--- a/src/app/dish-list/dish-list.component.scss
+++ b/src/app/dish-list/dish-list.component.scss
@@ -39,6 +39,7 @@ tr, td{
   padding: 12px 20px;
   border: none;
   margin-top: 30px;
+  margin-bottom: 10px;
   background-color: #70C1B3;
   border: 2px solid #247BA0;
   border-radius: 10px;
